Fixing small header alignment

--- a/illustrations_styles.css
+++ b/illustrations_styles.css
@@ -179,11 +179,13 @@
 
 .h3 {
 	margin-bottom: 10px;
+	margin-top: 20px;
 }
 
 @media (min-width: 720px) {
     .h3 {
         margin-bottom: 0;
+        margin-top: 0;
     }
 }
 
